[package]
name = "compose_yml"
version = "0.0.55"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Parse, manipulate and serialize docker-compose.yml in a strongly-typed fashion"
documentation = "http://docs.rs/compose_yml"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/compose_yml"

[dependencies]
clippy = { version = "0.*", optional = true }
error-chain = "0.5"
lazy_static = "1.0"
log = "0.4.8"
regex = "1.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.11"
yaml-rust = "0.4"
url = "2.1.1"
valico = "3.2.0"
void = "1.0"
