[package]
name = "compose_yml"
version = "0.0.57"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Parse, manipulate and serialize docker-compose.yml in a strongly-typed fashion"
documentation = "http://docs.rs/compose_yml"
license = "CC0-1.0 AND Apache-2.0"
readme = "README.md"
repository = "https://github.com/emk/compose_yml"

[dev-dependencies]
anyhow = "1.0.28"

[dependencies]
clippy = { version = "0.*", optional = true }
lazy_static = "1.0"
log = "0.4.8"
regex = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.11"
thiserror = "1.0.14"
yaml-rust = "0.4"
url = "2.1.1"
valico = "3.2.0"
void = "1.0"
