[package]
name = "compose_yml"
version = "0.0.59"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Parse, manipulate and serialize docker-compose.yml in a strongly-typed fashion"
documentation = "http://docs.rs/compose_yml"
license = "CC0-1.0 AND Apache-2.0"
readme = "README.md"
repository = "https://github.com/emk/compose_yml"

[dev-dependencies]
anyhow = ">=1"

[dependencies]
clippy = { version = ">=0", optional = true }
lazy_static = ">=1"
log = ">=0"
regex = ">=1"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
serde_yaml = ">=0"
thiserror = ">=1"
yaml-rust = ">=0"
url = ">=2"
valico = ">=3"
void = ">=1"
